--- a/form_produto.html
+++ b/form_produto.html
@@ -31,8 +31,8 @@ Nome:<br>
 <input type="text" name="nome" id="nome" size="50" maxlength="64" value=""/> &nbsp;&nbsp;&nbsp;
 <select title="Selecione" name="selecione">
   <option>Selecione</option>
-  <option value="1">Perecivil</option>
-  <option value="0">Nao perecivil</option>
+  <option value="perecível">Perecivil</option>
+  <option value="não perecível">Nao perecivil</option>
 </select title="Selecione"> &nbsp;&nbsp;&nbsp;&nbsp; 
 Quantidade de estoque:
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="qtd_estoque" id="qtd_estoque" size="10" value=""/>
