--- a/fornecedores.html
+++ b/fornecedores.html
@@ -30,7 +30,7 @@
 </script>
 
 <body>
-<meta charset="utf-8">
+<meta charset="latin1_swedish_ci">
 </head>
 <form name="fornecedor" method="post" id="fornecedor" action="cad_forn.php">
 <fieldset>
