--- a/fornecedores.html
+++ b/fornecedores.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+<title> Fornecedores </title>
 <script type="text/javascript" src="js/jquery.js"></script>
 
 <script>
@@ -30,54 +31,62 @@
 </script>
 
 <body>
-<meta charset="latin1_swedish_ci">
-</head>
+<meta charset="utf-8">
+<link rel="stylesheet" href="css/css/style.css" />
+<link href='http://fonts.googleapis.com/css?family=Engagement' rel='stylesheet' type='text/css'/>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/jquery.uniform.min.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" charset="utf-8">
+      $(function(){
+        $("input:checkbox, input:radio, input:file, select").uniform();
+      });
+    </script>
+<script>
+function pesquisa(){
+
+window.location.href="pesquisa_forn.html";
+
+}
+
+</script>
+<h1>Cadastro de Fornecedores</h1>
 <form name="fornecedor" method="post" id="fornecedor" action="cad_forn.php">
-<fieldset>
-<legend>Dados cadastrais</legend>
-Razão:<br>
-<input type="text" name="razao" id="razao" size="50" value=""/> &nbsp;&nbsp;&nbsp;
-CNPJ:
-<input type="text" name="cnpj" size="20" maxlength="14" value=""/> <br>
-Rua:<br>
-<input type="text" name="rua" size="50" value=""/> &nbsp;&nbsp;&nbsp;
-Numero:
-<input type="text" name="numero" size="10" value=""/> <br>
-Complemento:<br>
-<input type="text" name="complemento" size="20" value=""/>&nbsp;&nbsp;&nbsp;
-Bairro:
-<input type="text" name="bairro" size="15" value=""/>&nbsp;&nbsp;&nbsp;
-CEP:
-<input type="text" name="cep" size="10" maxlength="8" value=""/> <br>
-Cidade: <br>
-<input type="text" name="cidade" size="20" value=""/>&nbsp;&nbsp;&nbsp;
-UF:
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="uf" size="3" maxlength="2" value=""/>&nbsp;&nbsp;&nbsp;
-País:
-<input type="text" name="pais" size="15" value=""/> <br>
-Fone:<br>
-<input type="text" name="fone" size="20" maxlength="11" value=""/>&nbsp;&nbsp;&nbsp;
+
+<label for="razao">Razão:</label>
+<input type="text" name="razao" id="razao" size="60" value=""/> <br><br>
+<label for="cnpj">CNPJ:</label>
+<input type="text" name="cnpj" id="cnpj" size="20" maxlength="14" value=""/> <br><br>
+
+<label for="rua">Rua:</label>
+<input type="text" name="rua" id="rua" size="30" value=""/>
+
+<label for="numero">Numero:</label>
+<input type="text" name="numero" id="numero" size="7" value=""/> <br><br>
+
+<label for="complemento">Complemento:</label><br>
+<input type="text" id="complemento" name="complemento" size="15" value=""/>
+<label for="bairro">Bairro:</label>
+<input type="text" name="bairro" id="bairro" size="15" value=""/>
+<label for="cep">CEP:</label>
+<input type="text" name="cep" size="10" id="cep"  maxlength="8" value=""/> <br><br>
+<label for="cidade">Cidade:</label><br>
+<input type="text" name="cidade" id="cidade" size="20" value=""/>
+<label for="uf">UF:</label> 	
+<input type="text" name="uf" size="3" id="uf" maxlength="2" value=""/>
+<label for="pais">País:</label>
+<input type="text" name="pais" size="15" id="pais" value=""/> <br><br>
+<label for="fone">Telefone:</label><br>
+<input type="text" name="fone" size="15" id="fone" maxlength="11" value=""/>
 E-mail:
-<input type="text" name="email" size="40" id="email"/> <br>
-</fieldset> <br>
+<input type="text" name="email" size="40" id="email" value=""/> <br>
+ <br>
 <input type="submit" value="Cadastrar">
 </form>
-<html>
- <head>
-  <title>Busca Fornecedor</title>
- </head>
-<body>
-<br><br>
-<form name="busca_forn" method="post" id="busca_forn" action="busca_forn.php">
-<fieldset>
-<legend> Busca </legend>
-Busca por CNPJ:<br>
-<input type="text" name="bus_cnpj" id="bus_cnpj" size="30" value=""/> &nbsp;&nbsp;&nbsp;&nbsp;
-<input type="submit" value="Buscar">
-</fieldset>
-</form>
-</body>
-</html>
+<input type="button" value="Pesquisar" id="pesquisar" onclick="pesquisa()">
+<footer>
+<p>Desenvolvido por Igor Veras da Silva
+</footer>
+</head>
 </body>
 
 
